[package]
name = "imagio-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
fast_image_resize = { version = "4.0.0", features = ["image"] }
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg", "avif", "webp"] }
mime_guess = "2.0.4"
opendal = { version = "0.47.0", features = ["services-fs", "services-s3"] }
rusqlite = "0.31.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
thiserror = "1.0.61"
tokio = { version = "1.38.2", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["fast-rng", "v4"] }
